# RustVCS

./: Cargo.toml  LICENSE.md  README.md  deny.toml
.github/workflows/: build.yml  clippy.yml
src/: lib.rs
src/modules/: mod.rs
src/modules/base/: mod.rs  requesthandler.rs
src/modules/github/: githubhandler.rs  mod.rs
src/modules/github/structs/: githubstructs.rs
