[package]
name = "rustvcs"
version = "0.1.0"
description = "RustVCS, yeah."
repository = "https://github.com/misilelab/rustvcs"
documentation = "https://docs.rs/rustvcs"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "1.7"