[package]
name = "rustvcs"
version = "0.1.0"
description = "Version Control System hosting site API wrapper"
repository = "https://github.com/misilelab/rustvcs"
documentation = "https://docs.rs/rustvcs"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.56"
serde_json = "1.0.81"